FIX : 챗,팀리스트 z-index 수정

--- a/src/styles/components/chat-page/chat-room.scss
+++ b/src/styles/components/chat-page/chat-room.scss
@@ -25,10 +25,7 @@
   }
 
   .chatHeaderFixed {
-    position: sticky;
-    top: 0;
     color: $color-primary;
-    z-index: 10;
     padding: 12px 16px;
     font-size: 18px;
     font-weight: bold;
