--- a/src/styles/components/team-page/team-list.scss
+++ b/src/styles/components/team-page/team-list.scss
@@ -9,6 +9,7 @@
     border-bottom: 1px solid $color-key-1;
     padding: 8px 0;
     position: relative;
+    z-index: -1;
 
     &__title {
       margin: 10px 0;
